--- a/code/Python/AirBnB_Analysis.ipynb
+++ b/code/Python/AirBnB_Analysis.ipynb
@@ -818,7 +818,7 @@
    "id": "a381806e-2ea7-486e-85bf-73a2efb2b840",
    "metadata": {},
    "source": [
-    "It's a bit interesting that the minimum price is $0 as free AirBnBs seem unlikely. There are 11 rows where the price is listed as $0, so this may be a data entry error or missing data."
+    "Since free AirBnBs listings seem unlikely, it's a bit interesting that the minimum price is 0. There are 11 rows where the price is listed as 0, so this may be a data entry error or missing data."
    ]
   },
   {
